# kde-gcode-thumb

./: CMakeLists.txt  README.md  gcode-thumb-kde.kdev4  gcodecreator.cpp  gcodecreator.h  gcodethumbnail.desktop
